testdata/baselines/reference/submodule/compiler/unusedTypeParameterInFunction4.errors.txt
unusedTypeParameterInFunction4.ts(1,13): error TS6196: 'X' is declared but never used.


==== unusedTypeParameterInFunction4.ts (1 errors) ====
    function f1<X, Y, Z>() {
                ~
!!! error TS6196: 'X' is declared but never used.
        var a: Y;
        var b: Z;
        a;
        b;
    }